tests/struct_field_defaults_embedded_bad.stderr
tests/struct_field_defaults_embedded_bad.sl:7:9: error: SL2046: default expression type mismatch for field 'Base'
