tests/struct_field_defaults_embedded_bad.sl
struct Base {
    x i32
}

struct Bad {
    Base = Base{ x = 1 }
    y i32
}
